# src/openApi/openapi.yaml
@@ -86,7 +86,6 @@ paths:
                 $ref: "#/components/schemas/User"
         "404":
           description: User not found
-
     put:
       tags:
         - "users"
@@ -112,7 +111,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-
     delete:
       tags:
         - "users"
@@ -295,6 +293,49 @@ paths:
     put:
       tags:
         - "messages"
+      summary: Update a message if the message is a draft
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Message data to update
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MessageInput"
+      responses:
+        "200":
+          description: Message updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "404":
+          description: Message not found
+    delete:
+      tags:
+        - "messages"
+      summary: Delete a message
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Message deleted
+        "404":
+          description: Message not found
+
+  /messages/{id}/status:
+    put:
+      tags:
+        - "messages"
       summary: Update a message status
       parameters:
         - name: id
@@ -312,7 +353,7 @@ paths:
               properties:
                 status:
                   type: string
-                  enum: [UNREAD, READ, FOLLOWED]
+                  enum: [UNREAD, READ]
       responses:
         "200":
           description: Message status updated
@@ -322,6 +363,8 @@ paths:
                 $ref: "#/components/schemas/Message"
         "404":
           description: Message not found
+        "400":
+          description: Invalid status
 
   /messages/{id}/move:
     put:
@@ -335,7 +378,7 @@ paths:
           schema:
             type: string
       requestBody:
-        description: Folder name to move the message
+        description: Folder id to move the message
         required: true
         content:
           application/json:
@@ -352,11 +395,115 @@ paths:
               schema:
                 $ref: "#/components/schemas/Message"
         "404":
-          description: Message not found
-        # "404":
-        #   description: Folder not found"
+          description: Not found error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Message not found"]
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Folder not found"]
 
-  # Folders
+  /messages/{id}/favorite:
+    put:
+      tags:
+        - "messages"
+      summary: Toggle a message favorite
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Message favorite toggled
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "404":
+          description: Message not found
+
+  /messages/{id}/trash:
+    put:
+      tags:
+        - "messages"
+      summary: Toggle a message trash
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Message trash toggled
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "404":
+          description: Message not found
+
+  /messages/{id}/send:
+    put:
+      tags:
+        - "messages"
+      summary: Send a message
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Message sent
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Message"
+        "404":
+          description: Message not found
+        "400":
+          description: Conflict error
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Message is not a draft"]
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Message is already sent"]
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Message is in trash"]
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["Message has no recipients"]
+                  - type: object
+                    properties:
+                      error:
+                        type: string
+                        enum: ["You are not the sender of this message"]
 
   # Folders
   /folders:
